-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0, 5.5.0, 5.6.2
-
ba19363529f4c099c6831c26d3acf98fa0c5f702
Some methods of QDate/QTime/QDateTime - most notably the toString methods - are internally using QLocale::system(). QLocale::system() calls the static systemData() method, which in turn can modify global state (in QLocalPrivate::updateSystemPrivate()). This produces race conditions, when e.g. the toString functions are called simultaneously from multiple threads (even on different QDate instances) and caused various random crashes in my project.
- is required for
-
QTBUG-46787 QLocale, QDateTime.toString() and QStorageInfo.refresh() are not thread safe (on win)
-
- Closed
-
For Gerrit Dashboard: QTBUG-49473 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
193592,9 | Mutex-lock QLocale's update of its globalLocaleData | dev | qt/qtbase | Status: MERGED | +2 | 0 |