Mutex-lock QLocale's update of its globalLocaleData

For want of this, nothing that used QLocale::system(), inter alia,
could be thread-safe or re-entrant.

Task-number: QTBUG-49473
Change-Id: I3e017aa7d59c4c39828bb5cdc7ff0780ea66bafe
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>